@@ -4,6 +4,7 @@ pre 0.15.0:
   the time between interrupts of one channel
 - AQE_ERROR_TICKS_TOO_HIGH removed, because it is already limited by the data type uint16_t
 - esp32: Change from mcpwm up count mode to up-down count mode
+- avr: adjust implementation to esp32: pulse at start of ticks period of a command
 
 0.14.0:
 - Direction pins can be shared by several steppers
